fdo#57678 fix import of RTF_PARD between RTF_CELL and RTF_ROW