writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -2077,11 +2077,15 @@ int RTFDocumentImpl::dispatchFlag(RTFKeyword nKeyword)
         case RTF_PARD:
             if (m_bHadPicture)
                 dispatchSymbol(RTF_PAR);
-            m_aStates.top().aParagraphSprms = m_aDefaultState.aParagraphSprms;
-            m_aStates.top().aParagraphAttributes = m_aDefaultState.aParagraphAttributes;
+            // \pard is allowed between \cell and \row, but in that case it should not reset the fact that we're inside a table.
+            if (m_aStates.top().nCells == 0)
+            {
+                m_aStates.top().aParagraphSprms = m_aDefaultState.aParagraphSprms;
+                m_aStates.top().aParagraphAttributes = m_aDefaultState.aParagraphAttributes;
+                if (m_aStates.top().nDestinationState != DESTINATION_SHAPETEXT)
+                    m_pCurrentBuffer = 0;
+            }
             m_aStates.top().resetFrame();
-            if (m_aStates.top().nDestinationState != DESTINATION_SHAPETEXT)
-                m_pCurrentBuffer = 0;
             break;
         case RTF_SECTD:
             m_aStates.top().aSectionSprms = m_aDefaultState.aSectionSprms;
